lat and long changed to doubles

--- a/NoSQL_setup_main.ipynb
+++ b/NoSQL_setup_main.ipynb
@@ -60395,12 +60395,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x286616f7940>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "establishments.update_many({}, [ {\"$set\" : {\"geocode.longitude\" : {\"$toDouble\" : \"$geocode.longitude\"},\n",
+    "                                            \"geocode.latitude\" : {\"$toDouble\" : \"$geocode.latitude\"}}}])"
    ]
   },
   {
@@ -60436,12 +60449,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "0deacaf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('66290ece8269e8bd0e35ffad'),\n",
+       " 'FHRSID': 289353,\n",
+       " 'ChangesByServerID': 0,\n",
+       " 'LocalAuthorityBusinessID': 'PI/000002468',\n",
+       " 'BusinessName': 'St Marys COE (aided) Primary School',\n",
+       " 'BusinessType': 'School/college/university',\n",
+       " 'BusinessTypeID': 7845,\n",
+       " 'AddressLine1': 'St Marys Church Of England Primary School',\n",
+       " 'AddressLine2': 'Warren Road',\n",
+       " 'AddressLine3': 'Folkestone',\n",
+       " 'AddressLine4': 'Kent',\n",
+       " 'PostCode': 'CT19 6QH',\n",
+       " 'Phone': '',\n",
+       " 'RatingValue': '5',\n",
+       " 'RatingKey': 'fhrs_5_en-gb',\n",
+       " 'RatingDate': '2016-09-13T00:00:00',\n",
+       " 'LocalAuthorityCode': '188',\n",
+       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+       " 'scores': {'Hygiene': 0, 'Structural': 0, 'ConfidenceInManagement': 0},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': 1.194762, 'latitude': 51.085797},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4591.871474174837,\n",
+       " 'NewRatingPending': False,\n",
+       " 'meta': {'dataSource': None,\n",
+       "  'extractDate': '0001-01-01T00:00:00',\n",
+       "  'itemCount': 0,\n",
+       "  'returncode': None,\n",
+       "  'totalCount': 0,\n",
+       "  'totalPages': 0,\n",
+       "  'pageSize': 0,\n",
+       "  'pageNumber': 0},\n",
+       " 'links': [{'rel': 'self',\n",
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/289353'}]}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
+    "# Check that the coordinates and rating value are now numbers\n",
+    "establishments.find_one()"
    ]
   }
  ],
