rating values changed to int, setup finished

--- a/NoSQL_setup_main.ipynb
+++ b/NoSQL_setup_main.ipynb
@@ -60427,10 +60427,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x28661366f80>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -60439,17 +60450,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x2866139ba80>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({}, [ {\"$set\" : {\"RatingValue\" : {\"$toInt\" : \"$RatingValue\"}}}])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
@@ -60469,7 +60492,7 @@
        " 'AddressLine4': 'Kent',\n",
        " 'PostCode': 'CT19 6QH',\n",
        " 'Phone': '',\n",
-       " 'RatingValue': '5',\n",
+       " 'RatingValue': 5,\n",
        " 'RatingKey': 'fhrs_5_en-gb',\n",
        " 'RatingDate': '2016-09-13T00:00:00',\n",
        " 'LocalAuthorityCode': '188',\n",
@@ -60494,7 +60517,7 @@
        "   'href': 'https://api.ratings.food.gov.uk/establishments/289353'}]}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
