exp. analysis hygiene score completed

--- a/NoSQL_analysis_main.ipynb
+++ b/NoSQL_analysis_main.ipynb
@@ -105,17 +105,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c2da7648",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82\n",
+      "{'AddressLine1': '5-6 Southfields Road',\n",
+      " 'AddressLine2': 'Eastbourne',\n",
+      " 'AddressLine3': 'East Sussex',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'The Chase Rest Home',\n",
+      " 'BusinessType': 'Caring Premises',\n",
+      " 'BusinessTypeID': 5,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4613.888288172291,\n",
+      " 'FHRSID': 110681,\n",
+      " 'LocalAuthorityBusinessID': '4029',\n",
+      " 'LocalAuthorityCode': '102',\n",
+      " 'LocalAuthorityEmailAddress': 'Customerfirst@eastbourne.gov.uk',\n",
+      " 'LocalAuthorityName': 'Eastbourne',\n",
+      " 'LocalAuthorityWebSite': 'http://www.eastbourne.gov.uk/foodratings',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'BN21 1BU',\n",
+      " 'RatingDate': '2021-09-23T00:00:00',\n",
+      " 'RatingKey': 'fhrs_0_en-gb',\n",
+      " 'RatingValue': 0,\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66290ece8269e8bd0e361adf'),\n",
+      " 'geocode': {'latitude': 50.769705, 'longitude': 0.27694},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/110681',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 20, 'Hygiene': 20, 'Structural': 20}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the establishments with a hygiene score of 20\n",
-    "query =\n",
+    "query = {\"scores.Hygiene\" : 20}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
+    "print(establishments.count_documents(query))\n",
     "\n",
-    "# Display the first document in the results using pprint\n"
+    "# Display the first document in the results using pprint\n",
+    "results = establishments.find(query)\n",
+    "pprint(results[0])"
    ]
   },
   {
